--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,3 +29,9 @@ eureka:
 
 greeting:
   message: Welcome to the Simple E-commerce.
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh, health, beans
