--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,19 +4,25 @@ server:
 spring:
   application:
     name: user-service
-  datasource:
-    url: jdbc:h2:~/Spring/msa/gateway/h2/testdb-user
-    username: sa
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
+#  datasource:
+#    url: jdbc:h2:~/Spring/msa/gateway/h2/testdb-user
+#    username: sa
+#  jpa:
+#    hibernate:
+#      ddl-auto: update
+#      show-sql: true
   h2:
     console:
       enabled: true
       settings:
         web-allow-others: true
       path: /h2-console
+  rabbitmq:
+    host: 127.0.0.1
+    port: 5672
+    username: guest
+    password: guest
+
 
 eureka:
   instance:
@@ -34,4 +40,4 @@ management:
   endpoints:
     web:
       exposure:
-        include: refresh, health, beans
+        include: refresh, health, beans, busrefresh
